--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <br>
     <hr>
     <center>
-    <a href="" target="_black" style="text-decoration: none; color: black; font-size: 16px; font-weight: bold;">Click here for Github Repo</a>
+    <a href="https://github.com/Bhoward19/SmashClick" target="_black" style="text-decoration: none; color: black; font-size: 16px; font-weight: bold;">Click here for Github Repo</a>
     </center>
     <hr>
   </body>
